[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/BG_SKIES.png" type="Texture" id=1]
[ext_resource path="res://scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://fonts/Montserrat-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://audio/click-short-confirm.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/click-short.wav" type="AudioStream" id=5]
[ext_resource path="res://fonts/Montserrat-Light.otf" type="DynamicFontData" id=6]
[ext_resource path="res://audio/Maplestory Login Theme.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 6 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -180.0
margin_right = 325.0
margin_bottom = 180.0
color = Color( 0.223529, 0.223529, 0.223529, 0.784314 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -180.0
margin_right = -320.0
margin_bottom = 180.0
color = Color( 0.223529, 0.223529, 0.223529, 0.784314 )

[node name="Back" type="Button" parent="."]
margin_left = 867.0
margin_top = 495.0
margin_right = 952.0
margin_bottom = 533.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.580392, 0.278431, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "BACK"
flat = true
align = 0

[node name="Hoversound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Clicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "BGM"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 359.0
margin_top = 216.0
margin_right = -340.0
margin_bottom = -335.0

[node name="Music" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 581.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/Music"]
margin_right = 75.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "MUSIC  "

[node name="Music_Slider" type="HSlider" parent="VBoxContainer/Music"]
margin_left = 79.0
margin_right = 429.0
margin_bottom = 16.0
rect_min_size = Vector2( 350, 0 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="MValue" type="Label" parent="VBoxContainer/Music"]
margin_left = 433.0
margin_right = 433.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )

[node name="MsValue" type="RichTextLabel" parent="VBoxContainer/Music"]
visible = false
margin_left = 437.0
margin_right = 437.0
margin_bottom = 24.0
custom_fonts/normal_font = SubResource( 3 )
text = "0%"

[node name="Sound" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 581.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/Sound"]
margin_right = 74.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "SOUND"

[node name="Sound_Slider" type="HSlider" parent="VBoxContainer/Sound"]
margin_left = 78.0
margin_right = 428.0
margin_bottom = 16.0
rect_min_size = Vector2( 350, 0 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="SValue" type="Label" parent="VBoxContainer/Sound"]
margin_left = 432.0
margin_right = 432.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )

[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="VBoxContainer/Music/Music_Slider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sound/Sound_Slider" to="." method="_on_Sound_Slider_value_changed"]
